<resources>
    <string name="app_name">calendar</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="currentdate">CurrentDate</string>
    <string name="wed">Wed</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="todo">TODO</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="piechart">piechart</string>
    <string name="calendar">calendar</string>
    <string name="add_note">Add note</string>
    <string name="textview">TextView</string>
    <string name="glad">Веселое</string>
    <string name="sad">Грустное</string>
    <string name="angry">Злое</string>
    <string name="deleterus">Удалить</string>
    <string name="add_note_rus">Добавить заметку</string>
    <string name="saverus">Сохранить</string>
    <string name="mood_note">MOOD NOTE</string>
    <string name="mon_rus">Пн</string>
    <string name="wed_rus">Ср</string>
    <string name="tue_rus">Вт</string>
    <string name="thu_rus">Чт</string>
    <string name="fri_rus">Пт</string>
    <string name="sat_rus">Сб</string>
    <string name="sun_rus">Вс</string>
    <string name="deleteall_rus">Удалить все</string>
    <string name="zametka">Заметка</string>
    <string name="wonderful_rus">Прекрасное</string>
    <string name="awful_rus">Ужасное</string>
    <string-array name="motivs">
        <item name="1">Ты все сможешь!</item>
        <item name="2">Удачного дня!</item>
        <item name="3">Ты можешь многое!</item>
        <item name="4">Какой у тебя сегодня был день?</item>
        <item name="5">Ты в порядке?</item>
        <item name="6">Ты солнышко!</item>
    </string-array>

</resources>