<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <Button
        android:id="@+id/wonderful"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wonderful_rus"
        android:textColor="@color/black"
        app:backgroundTint="@color/pink" />
    <Button
        android:id="@+id/angry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angry"
        android:textColor="@color/black"
        app:backgroundTint="@color/red" />
    <Button
        android:id="@+id/glad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glad"
        android:textColor="@color/black"
        app:backgroundTint="@color/yellow" />

    <Button
        android:id="@+id/sad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sad"
        android:textColor="@color/black"
        app:backgroundTint="@color/blue" />


    <Button
        android:id="@+id/awful"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/awful_rus"
        android:textColor="@color/black"
        app:backgroundTint="@color/greenmood" />


    <Button
        android:id="@+id/deleteall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleterus"
        android:textColor="@color/black"
        app:backgroundTint="@color/green" />

    <Button
        android:id="@+id/add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note_rus"
        android:textColor="@color/black"
        app:backgroundTint="@color/green" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>